swagger doc fix
